--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,18 @@
 <footer>
-    I-BIT Zoo, 2024
+
+    <div class="footer-content">
+        <div class="LOGO-Footer">
+            <a href="/zoo"><img src="/images/Logo.png" alt="" style="width: 80px; height: 80px;"></a>
+        </div>
+        <div class="text-footer">
+            <a href="#">Back to top</a>
+            <p>Web example For KMUTNB</p>
+            I-BIT I-Zoo © 2023-2023
+        </div>
+        <a class="about" href="/about">
+            <button class="navbtn" role="button">About Us</button>
+        </a>
+
+    </div>
+
 </footer>
