--- a/public/styles.css
+++ b/public/styles.css
@@ -88,6 +88,7 @@ footer {
     width: 100%;
     height: 125px;
     padding-top: 20px;
+    padding-bottom: 20px;
     margin-top: 50px;
 }
 
@@ -119,6 +120,7 @@ h3 {
     margin-right: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .LOGO-Footer {
