--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE ejs>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +20,6 @@
                         <a href="/zoo">
                                 WELCOME TO THE I-ZOO!
                             </a>
-
-                        <!-- <h1>Welcome to the zoo!</h1> -->
-                        <!-- </a>
-                        <p style="font-size:20px;margin-left: 20px;margin-top: 10px;">A Zoo Site</p> -->
                     </div>
                 </div>
                 <div class="nav-column">
@@ -108,6 +106,5 @@
         <!--================== Footer Ends Here -->
 
 </body>
-<script src="script.js"></script>
 
 </html>
