--- a/public/aboutStyle.css
+++ b/public/aboutStyle.css
@@ -1,74 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-header {
-    height: 300px;
-    position: relative;
-}
-
-header::before {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(./office.jpg);
-    background-position: bottom;
-    background-size: cover;
-    opacity: 0.8;
-    z-index: -1;
-}
-
-header::after {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 0.6;
-    background-size: cover;
-    background-color: black;
-    background-position: bottom;
-} */
-
-
-/* .navbar {
-    color: #fff;
-    padding: 1rem 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.navbar ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-}
-
-.navbar .responsive {
-    display: none;
-}
-
-.navbar ul li {
-    padding: 8px 12px;
-}
-
-.navbar ul li a {
-    z-index: 2;
-    color: #fff;
-    position: relative;
-    text-decoration: none;
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 :root {
     --surface-color: #bbed64;
@@ -455,6 +384,7 @@ footer {
     width: 100%;
     height: 125px;
     padding-top: 20px;
+    padding-bottom: 20px;
     margin-top: 50px;
 }
 
@@ -486,6 +416,7 @@ h3 {
     margin-right: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .LOGO-Footer {
